// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api/auth 1`] = `
"import type { HttpClient } from "@/shared/api/__generated__/http-client";

import type {
  AuthResponseDto,
  LoginRequestDto,
  RefreshTokenRequestDto,
  SignUpRequestDto,
} from "@/shared/api/__generated__/dto";
import {
  authResponseDtoSchema,
  loginRequestDtoSchema,
  refreshTokenRequestDtoSchema,
  signUpRequestDtoSchema,
} from "@/shared/api/__generated__/schema";
import { validateSchema } from "@/shared/api/__generated__/utils";

export class AuthApi {
  private readonly httpClient: HttpClient;

  constructor(httpClient: HttpClient) {
    this.httpClient = httpClient;
  }

  /**
   * @tags auth
   * @summary Sign Up
   * @request POST:/auth/signup
   */
  async postAuthSignup({
    payload,
  }: TAuthApiRequestParameters["postAuthSignup"]) {
    const validatedPayload = validateSchema(signUpRequestDtoSchema, payload);
    const response = await this.httpClient.request<AuthResponseDto>({
      method: "POST",
      url: \`auth/signup\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(authResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags auth
   * @summary Login
   * @request POST:/auth/login
   */
  async postAuthLogin({ payload }: TAuthApiRequestParameters["postAuthLogin"]) {
    const validatedPayload = validateSchema(loginRequestDtoSchema, payload);
    const response = await this.httpClient.request<AuthResponseDto>({
      method: "POST",
      url: \`auth/login\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(authResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags auth
   * @summary Logout
   * @request POST:/auth/logout
   */
  async postAuthLogout({}: TAuthApiRequestParameters["postAuthLogout"] = {}) {
    const response = await this.httpClient.request<void>({
      method: "POST",
      url: \`auth/logout\`,
    });

    return response;
  }

  /**
   * @tags auth
   * @summary Refresh Token
   * @request POST:/auth/refresh
   */
  async postAuthRefresh({
    payload,
  }: TAuthApiRequestParameters["postAuthRefresh"]) {
    const validatedPayload = validateSchema(
      refreshTokenRequestDtoSchema,
      payload,
    );
    const response = await this.httpClient.request<AuthResponseDto>({
      method: "POST",
      url: \`auth/refresh\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(authResponseDtoSchema, response);
    return validateResponse;
  }
}

export type TAuthApiRequestParameters = {
  postAuthSignup: {
    payload: SignUpRequestDto;
  };
  postAuthLogin: {
    payload: LoginRequestDto;
  };
  postAuthLogout: {};
  postAuthRefresh: {
    payload: RefreshTokenRequestDto;
  };
};
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api/chats 1`] = `
"import type { HttpClient } from "@/shared/api/__generated__/http-client";

import type {
  ChatCreateRequestDto,
  ChatDetailResponseDto,
  ChatListResponseDto,
  ChatResponseDto,
  ChatUpdateRequestDto,
  GetChatsQueryParams,
  MessageCreateRequestDto,
  MessageListResponseDto,
  StreamStatusResponseDto,
} from "@/shared/api/__generated__/dto";
import {
  chatCreateRequestDtoSchema,
  chatDetailResponseDtoSchema,
  chatListResponseDtoSchema,
  chatResponseDtoSchema,
  chatUpdateRequestDtoSchema,
  messageCreateRequestDtoSchema,
  messageListResponseDtoSchema,
  streamStatusResponseDtoSchema,
} from "@/shared/api/__generated__/schema";
import { validateSchema } from "@/shared/api/__generated__/utils";
import {
  ChatsByChatIdMessagesStreamHandler,
  type ChatsByChatIdMessagesStreamCallbacks,
} from "../../api/stream-handlers";

export class ChatsApi {
  private readonly httpClient: HttpClient;

  constructor(httpClient: HttpClient) {
    this.httpClient = httpClient;
  }

  /**
   * @tags chats
   * @summary Get Chats
   * @request GET:/chats
   */
  async getChats({ params }: TChatsApiRequestParameters["getChats"]) {
    const response = await this.httpClient.request<ChatListResponseDto>({
      method: "GET",
      url: \`chats\`,
      query: params,
    });

    const validateResponse = validateSchema(
      chatListResponseDtoSchema,
      response,
    );
    return validateResponse;
  }

  /**
   * @tags chats
   * @summary Create Chat
   * @request POST:/chats
   */
  async postChats({ payload }: TChatsApiRequestParameters["postChats"]) {
    const validatedPayload = validateSchema(
      chatCreateRequestDtoSchema,
      payload,
    );
    const response = await this.httpClient.request<ChatResponseDto>({
      method: "POST",
      url: \`chats\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(chatResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags chats
   * @summary Get Chat
   * @request GET:/chats/{chatId}
   */
  async getChatsByChatId({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatId"]) {
    const response = await this.httpClient.request<ChatDetailResponseDto>({
      method: "GET",
      url: \`chats/\${chatId}\`,
    });

    const validateResponse = validateSchema(
      chatDetailResponseDtoSchema,
      response,
    );
    return validateResponse;
  }

  /**
   * @tags chats
   * @summary Update Chat Title
   * @request PATCH:/chats/{chatId}
   */
  async patchChatsByChatId({
    chatId,
    payload,
  }: TChatsApiRequestParameters["patchChatsByChatId"]) {
    const validatedPayload = validateSchema(
      chatUpdateRequestDtoSchema,
      payload,
    );
    const response = await this.httpClient.request<ChatResponseDto>({
      method: "PATCH",
      url: \`chats/\${chatId}\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(chatResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags chats
   * @summary Delete Chat
   * @request DELETE:/chats/{chatId}
   */
  async deleteChatsByChatId({
    chatId,
  }: TChatsApiRequestParameters["deleteChatsByChatId"]) {
    const response = await this.httpClient.request<void>({
      method: "DELETE",
      url: \`chats/\${chatId}\`,
    });

    return response;
  }

  /**
   * @tags chats
   * @summary Get Messages
   * @request GET:/chats/{chatId}/messages
   */
  async getChatsByChatIdMessages({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatIdMessages"]) {
    const response = await this.httpClient.request<MessageListResponseDto>({
      method: "GET",
      url: \`chats/\${chatId}/messages\`,
    });

    const validateResponse = validateSchema(
      messageListResponseDtoSchema,
      response,
    );
    return validateResponse;
  }

  /**
   * @tags chats
   * @summary Send Message
   * @request POST:/chats/{chatId}/messages
   *
   * @todo 1. ReadableStreamHandler를 상속받아 "./stream-handlers" 경로에 ChatsByChatIdMessagesStreamHandler 클래스를 구현해주세요
   * @see 구현 가이드: https://github.com/dhlab-org/swagger-client-autogen/blob/main/.docs/stream-handler-guide.md
   *
   * @todo 2. 스트리밍 응답은 TanStack Query hook 코드를 자동으로 생성하지 않기 때문에 직접 훅을 구현해서 사용해야 합니다.
   * @see TanStack Query 통합 가이드: https://github.com/dhlab-org/swagger-client-autogen/blob/main/.docs/tanstack-query-stream.md
   */
  async postChatsByChatIdMessages({
    chatId,
    payload,
    callbacks,
  }: TChatsApiRequestParameters["postChatsByChatIdMessages"] & {
    callbacks: ChatsByChatIdMessagesStreamCallbacks;
  }) {
    const validatedPayload = validateSchema(
      messageCreateRequestDtoSchema,
      payload,
    );
    const response = await this.httpClient.requestStream({
      method: "POST",
      url: \`chats/\${chatId}/messages\`,
      body: validatedPayload,
    });

    return new ChatsByChatIdMessagesStreamHandler(response, callbacks);
  }

  /**
   * @tags chats
   * @summary Get Stream Status
   * @request GET:/chats/{chatId}/stream-status
   */
  async getChatsByChatIdStreamStatus({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatIdStreamStatus"]) {
    const response = await this.httpClient.request<StreamStatusResponseDto>({
      method: "GET",
      url: \`chats/\${chatId}/stream-status\`,
    });

    const validateResponse = validateSchema(
      streamStatusResponseDtoSchema,
      response,
    );
    return validateResponse;
  }
}

export type TChatsApiRequestParameters = {
  getChats: {
    params?: GetChatsQueryParams;
  };
  postChats: {
    payload: ChatCreateRequestDto;
  };
  getChatsByChatId: {
    chatId: number;
  };
  patchChatsByChatId: {
    chatId: number;
    payload: ChatUpdateRequestDto;
  };
  deleteChatsByChatId: {
    chatId: number;
  };
  getChatsByChatIdMessages: {
    chatId: number;
  };
  postChatsByChatIdMessages: {
    chatId: number;
    payload: MessageCreateRequestDto;
  };
  getChatsByChatIdStreamStatus: {
    chatId: number;
  };
};
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api/users 1`] = `
"import type { HttpClient } from "@/shared/api/__generated__/http-client";

import type {
  UserResponseDto,
  UserUpdateRequestDto,
} from "@/shared/api/__generated__/dto";
import {
  userResponseDtoSchema,
  userUpdateRequestDtoSchema,
} from "@/shared/api/__generated__/schema";
import { validateSchema } from "@/shared/api/__generated__/utils";

export class UsersApi {
  private readonly httpClient: HttpClient;

  constructor(httpClient: HttpClient) {
    this.httpClient = httpClient;
  }

  /**
   * @tags users
   * @summary Get Current User
   * @request GET:/users/me
   */
  async getUsersMe({}: TUsersApiRequestParameters["getUsersMe"] = {}) {
    const response = await this.httpClient.request<UserResponseDto>({
      method: "GET",
      url: \`users/me\`,
    });

    const validateResponse = validateSchema(userResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags users
   * @summary Update Current User
   * @request PATCH:/users/me
   */
  async patchUsersMe({ payload }: TUsersApiRequestParameters["patchUsersMe"]) {
    const validatedPayload = validateSchema(
      userUpdateRequestDtoSchema,
      payload,
    );
    const response = await this.httpClient.request<UserResponseDto>({
      method: "PATCH",
      url: \`users/me\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(userResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags users
   * @summary Delete Current User
   * @request DELETE:/users/me
   */
  async deleteUsersMe({}: TUsersApiRequestParameters["deleteUsersMe"] = {}) {
    const response = await this.httpClient.request<void>({
      method: "DELETE",
      url: \`users/me\`,
    });

    return response;
  }
}

export type TUsersApiRequestParameters = {
  getUsersMe: {};
  patchUsersMe: {
    payload: UserUpdateRequestDto;
  };
  deleteUsersMe: {};
};
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api-instance/auth 1`] = `
"import { httpClient } from "@/shared/api/instance";

import { AuthApi } from "./index";

const authApi = new AuthApi(httpClient);

export { authApi };
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api-instance/chats 1`] = `
"import { httpClient } from "@/shared/api/instance";

import { ChatsApi } from "./index";

const chatsApi = new ChatsApi(httpClient);

export { chatsApi };
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/api-instance/users 1`] = `
"import { httpClient } from "@/shared/api/instance";

import { UsersApi } from "./index";

const usersApi = new UsersApi(httpClient);

export { usersApi };
"
`;

exports[`snapshot tests > API code generation > 'ai-chat' - api, apiInstance, dto > ai-chat/dto 1`] = `
"export type StreamStatusDto = "streaming" | "complete" | "error";

export type MessageRoleDto = "user" | "assistant" | "system";

export type SignUpRequestDto = {
  /** @format email */
  email: string;
  /** @minLength 8 */
  password: string;
  name: string;
};

export type LoginRequestDto = {
  /** @format email */
  email: string;
  password: string;
};

export type RefreshTokenRequestDto = {
  refreshToken: string;
};

export type AuthResponseDto = {
  accessToken: string;
  refreshToken: string;
  expiresIn?: number;
  user: UserResponseDto;
};

export type UserResponseDto = {
  /** @format uuid */
  id: string;
  email: string;
  name?: string;
  avatarUrl?: string;
  /** @format date-time */
  createdAt?: string;
};

export type UserUpdateRequestDto = {
  name?: string;
  avatarUrl?: string;
};

export type ChatResponseDto = {
  id: number;
  title: string;
  /** @format date-time */
  createdAt: string;
};

export type ChatDetailResponseDto = {
  id: number;
  title: string;
  /** @format date-time */
  createdAt: string;
  messageCount: number;
};

export type ChatCreateRequestDto = {
  title: string;
  /** @default "gpt-4" */
  model?: string;
};

export type ChatUpdateRequestDto = {
  title: string;
};

export type ChatListResponseDto = {
  items: ChatResponseDto[];
  nextCursor: string | null;
};

export type MessageListResponseDto = {
  data: MessageResponseDto[];
};

export type MessageResponseDto = {
  id: number;
  chatId: number;
  /** @format date-time */
  createdAt: string;
  role: MessageRoleDto;
  content: string;
};

export type MessageCreateRequestDto = {
  content: string;
  role?: MessageRoleDto;
};

export type StreamStatusResponseDto = {
  status: StreamStatusDto;
};

export type ErrorResponseDto = {
  message: string;
  code?: string;
};

export type GetChatsQueryParams = {
  cursor?: string | null;
  /** @default 10 */
  size?: number;
};
"
`;

exports[`snapshot tests > API code generation > 'petstore' - api, apiInstance, dto > petstore/api/pets 1`] = `
"import type { HttpClient } from "@/shared/api/__generated__/http-client";

import type {
  CreatePetRequestDto,
  ListPetsQueryParams,
  PetDto,
  PetListResponseDto,
  UpdatePetRequestDto,
} from "@/shared/api/__generated__/dto";
import {
  createPetRequestDtoSchema,
  petDtoSchema,
  petListResponseDtoSchema,
  updatePetRequestDtoSchema,
} from "@/shared/api/__generated__/schema";
import { validateSchema } from "@/shared/api/__generated__/utils";

export class PetsApi {
  private readonly httpClient: HttpClient;

  constructor(httpClient: HttpClient) {
    this.httpClient = httpClient;
  }

  /**
   * @tags pets
   * @summary List all pets
   * @request GET:/pets
   */
  async getPets({ params }: TPetsApiRequestParameters["getPets"]) {
    const response = await this.httpClient.request<PetListResponseDto>({
      method: "GET",
      url: \`pets\`,
      query: params,
    });

    const validateResponse = validateSchema(petListResponseDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags pets
   * @summary Create a pet
   * @request POST:/pets
   */
  async postPets({ payload }: TPetsApiRequestParameters["postPets"]) {
    const validatedPayload = validateSchema(createPetRequestDtoSchema, payload);
    const response = await this.httpClient.request<PetDto>({
      method: "POST",
      url: \`pets\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(petDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags pets
   * @summary Get a pet by ID
   * @request GET:/pets/{petId}
   */
  async getPetsByPetId({ petId }: TPetsApiRequestParameters["getPetsByPetId"]) {
    const response = await this.httpClient.request<PetDto>({
      method: "GET",
      url: \`pets/\${petId}\`,
    });

    const validateResponse = validateSchema(petDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags pets
   * @summary Update a pet
   * @request PUT:/pets/{petId}
   */
  async putPetsByPetId({
    petId,
    payload,
  }: TPetsApiRequestParameters["putPetsByPetId"]) {
    const validatedPayload = validateSchema(updatePetRequestDtoSchema, payload);
    const response = await this.httpClient.request<PetDto>({
      method: "PUT",
      url: \`pets/\${petId}\`,
      body: validatedPayload,
    });

    const validateResponse = validateSchema(petDtoSchema, response);
    return validateResponse;
  }

  /**
   * @tags pets
   * @summary Delete a pet
   * @request DELETE:/pets/{petId}
   */
  async deletePetsByPetId({
    petId,
  }: TPetsApiRequestParameters["deletePetsByPetId"]) {
    const response = await this.httpClient.request<void>({
      method: "DELETE",
      url: \`pets/\${petId}\`,
    });

    return response;
  }
}

export type TPetsApiRequestParameters = {
  getPets: {
    params?: ListPetsQueryParams;
  };
  postPets: {
    payload: CreatePetRequestDto;
  };
  getPetsByPetId: {
    petId: number;
  };
  putPetsByPetId: {
    petId: number;
    payload: UpdatePetRequestDto;
  };
  deletePetsByPetId: {
    petId: number;
  };
};
"
`;

exports[`snapshot tests > API code generation > 'petstore' - api, apiInstance, dto > petstore/api/users 1`] = `
"import { z } from "zod";

import type { HttpClient } from "@/shared/api/__generated__/http-client";

import type { UserDto } from "@/shared/api/__generated__/dto";
import { userDtoSchema } from "@/shared/api/__generated__/schema";
import { validateSchema } from "@/shared/api/__generated__/utils";

export class UsersApi {
  private readonly httpClient: HttpClient;

  constructor(httpClient: HttpClient) {
    this.httpClient = httpClient;
  }

  /**
   * @tags users
   * @summary List users
   * @request GET:/users
   */
  async getUsers({}: TUsersApiRequestParameters["getUsers"] = {}) {
    const response = await this.httpClient.request<UserDto[]>({
      method: "GET",
      url: \`users\`,
    });

    const validateResponse = validateSchema(z.array(userDtoSchema), response);
    return validateResponse;
  }

  /**
   * @tags users
   * @summary Get user by ID
   * @request GET:/users/{userId}
   */
  async getUsersByUserId({
    userId,
  }: TUsersApiRequestParameters["getUsersByUserId"]) {
    const response = await this.httpClient.request<UserDto>({
      method: "GET",
      url: \`users/\${userId}\`,
    });

    const validateResponse = validateSchema(userDtoSchema, response);
    return validateResponse;
  }
}

export type TUsersApiRequestParameters = {
  getUsers: {};
  getUsersByUserId: {
    userId: string;
  };
};
"
`;

exports[`snapshot tests > API code generation > 'petstore' - api, apiInstance, dto > petstore/api-instance/pets 1`] = `
"import { httpClient } from "@/shared/api/instance";

import { PetsApi } from "./index";

const petsApi = new PetsApi(httpClient);

export { petsApi };
"
`;

exports[`snapshot tests > API code generation > 'petstore' - api, apiInstance, dto > petstore/api-instance/users 1`] = `
"import { httpClient } from "@/shared/api/instance";

import { UsersApi } from "./index";

const usersApi = new UsersApi(httpClient);

export { usersApi };
"
`;

exports[`snapshot tests > API code generation > 'petstore' - api, apiInstance, dto > petstore/dto 1`] = `
"export type PetStatusDto = "available" | "pending" | "sold";

export type PetDto = {
  id: number;
  name: string;
  tag?: string;
  status: PetStatusDto;
};

export type CreatePetRequestDto = {
  name: string;
  tag?: string;
};

export type UpdatePetRequestDto = {
  name?: string;
  tag?: string;
  status?: PetStatusDto;
};

export type PetListResponseDto = {
  items: PetDto[];
  nextCursor?: string;
};

export type UserDto = {
  /** @format uuid */
  id: string;
  email: string;
  name?: string;
};

export type ErrorResponseDto = {
  message: string;
  code?: string;
};

export type ListPetsQueryParams = {
  /** @max 100 */
  limit?: number;
  cursor?: string;
};
"
`;

exports[`snapshot tests > Route configuration > 'ai-chat' - route metadata > ai-chat/routes 1`] = `
[
  {
    "functionName": "postAuthSignup",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "auth",
    "path": "/auth/signup",
    "responseType": "AuthResponseDto",
  },
  {
    "functionName": "postAuthLogin",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "auth",
    "path": "/auth/login",
    "responseType": "AuthResponseDto",
  },
  {
    "functionName": "postAuthLogout",
    "hasPayload": false,
    "hasQuery": false,
    "method": "post",
    "moduleName": "auth",
    "path": "/auth/logout",
    "responseType": "void",
  },
  {
    "functionName": "postAuthRefresh",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "auth",
    "path": "/auth/refresh",
    "responseType": "AuthResponseDto",
  },
  {
    "functionName": "getUsersMe",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "users",
    "path": "/users/me",
    "responseType": "UserResponseDto",
  },
  {
    "functionName": "patchUsersMe",
    "hasPayload": true,
    "hasQuery": false,
    "method": "patch",
    "moduleName": "users",
    "path": "/users/me",
    "responseType": "UserResponseDto",
  },
  {
    "functionName": "deleteUsersMe",
    "hasPayload": false,
    "hasQuery": false,
    "method": "delete",
    "moduleName": "users",
    "path": "/users/me",
    "responseType": "void",
  },
  {
    "functionName": "getChats",
    "hasPayload": false,
    "hasQuery": true,
    "method": "get",
    "moduleName": "chats",
    "path": "/chats",
    "responseType": "ChatListResponseDto",
  },
  {
    "functionName": "postChats",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "chats",
    "path": "/chats",
    "responseType": "ChatResponseDto",
  },
  {
    "functionName": "getChatsByChatId",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "chats",
    "path": "/chats/\${chatId}",
    "responseType": "ChatDetailResponseDto",
  },
  {
    "functionName": "patchChatsByChatId",
    "hasPayload": true,
    "hasQuery": false,
    "method": "patch",
    "moduleName": "chats",
    "path": "/chats/\${chatId}",
    "responseType": "ChatResponseDto",
  },
  {
    "functionName": "deleteChatsByChatId",
    "hasPayload": false,
    "hasQuery": false,
    "method": "delete",
    "moduleName": "chats",
    "path": "/chats/\${chatId}",
    "responseType": "void",
  },
  {
    "functionName": "getChatsByChatIdMessages",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "chats",
    "path": "/chats/\${chatId}/messages",
    "responseType": "MessageListResponseDto",
  },
  {
    "functionName": "postChatsByChatIdMessages",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "chats",
    "path": "/chats/\${chatId}/messages",
    "responseType": "string",
  },
  {
    "functionName": "getChatsByChatIdStreamStatus",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "chats",
    "path": "/chats/\${chatId}/stream-status",
    "responseType": "StreamStatusResponseDto",
  },
]
`;

exports[`snapshot tests > Route configuration > 'petstore' - route metadata > petstore/routes 1`] = `
[
  {
    "functionName": "getPets",
    "hasPayload": false,
    "hasQuery": true,
    "method": "get",
    "moduleName": "pets",
    "path": "/pets",
    "responseType": "PetListResponseDto",
  },
  {
    "functionName": "postPets",
    "hasPayload": true,
    "hasQuery": false,
    "method": "post",
    "moduleName": "pets",
    "path": "/pets",
    "responseType": "PetDto",
  },
  {
    "functionName": "getPetsByPetId",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "pets",
    "path": "/pets/\${petId}",
    "responseType": "PetDto",
  },
  {
    "functionName": "putPetsByPetId",
    "hasPayload": true,
    "hasQuery": false,
    "method": "put",
    "moduleName": "pets",
    "path": "/pets/\${petId}",
    "responseType": "PetDto",
  },
  {
    "functionName": "deletePetsByPetId",
    "hasPayload": false,
    "hasQuery": false,
    "method": "delete",
    "moduleName": "pets",
    "path": "/pets/\${petId}",
    "responseType": "void",
  },
  {
    "functionName": "getUsers",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "users",
    "path": "/users",
    "responseType": "(UserDto)[]",
  },
  {
    "functionName": "getUsersByUserId",
    "hasPayload": false,
    "hasQuery": false,
    "method": "get",
    "moduleName": "users",
    "path": "/users/\${userId}",
    "responseType": "UserDto",
  },
]
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/global-mutation-effect 1`] = `
"import type {
  DefaultError,
  Mutation,
  QueryClient,
} from "@tanstack/react-query";

import type { authMutations } from "@/entities/auth/__generated__/api/mutations";
import type { chatsMutations } from "@/entities/chats/__generated__/api/mutations";
import type { usersMutations } from "@/entities/users/__generated__/api/mutations";
// biome-ignore lint/suspicious/noExplicitAny: 타입 제약을 위해 any 사용
type AnyMutationFn = (variables: any) => any;

type MutationFactory = () => {
  mutationFn: AnyMutationFn;
  mutationKey: readonly unknown[];
};

export type MutationMap = Record<string, MutationFactory>;

type ExtractMutationDef<M extends MutationMap, K extends keyof M> = ReturnType<
  M[K]
>;

type ExtractMutationFn<
  M extends MutationMap,
  K extends keyof M,
> = ExtractMutationDef<M, K>["mutationFn"];

type ExtractMutationVariables<
  M extends MutationMap,
  K extends keyof M,
> = Parameters<ExtractMutationFn<M, K>>[0];

type ExtractMutationData<M extends MutationMap, K extends keyof M> = Awaited<
  ReturnType<ExtractMutationFn<M, K>>
>;

export type GlobalMutationEffectMap<M extends MutationMap> = Partial<{
  [K in keyof M]: {
    onSuccess: {
      invalidate: (
        data: ExtractMutationData<M, K>,
        variables: ExtractMutationVariables<M, K>,
        context: unknown,
        mutation: Mutation<
          ExtractMutationData<M, K>,
          DefaultError,
          ExtractMutationVariables<M, K>,
          unknown
        >,
      ) => void;
    };
  };
}>;

export type TAuthGlobalMutationEffects = GlobalMutationEffectMap<
  typeof authMutations
>;
export type TUsersGlobalMutationEffects = GlobalMutationEffectMap<
  typeof usersMutations
>;
export type TChatsGlobalMutationEffects = GlobalMutationEffectMap<
  typeof chatsMutations
>;

export type TGlobalMutationEffectFactory = (
  queryClient: QueryClient,
) => Partial<
  TAuthGlobalMutationEffects &
    TUsersGlobalMutationEffects &
    TChatsGlobalMutationEffects
>;
"
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/mutations/auth 1`] = `
"import type { DefaultError, UseMutationOptions } from "@tanstack/react-query";
import { useMutation } from "@tanstack/react-query";

import type { AuthResponseDto } from "@/shared/api/__generated__/dto";
import type { TAuthApiRequestParameters } from "./index";
import { authApi } from "./instance";

export const AUTH_MUTATION_KEY = {
  POST_AUTH_SIGNUP: ["auth", "signup"] as const,
  POST_AUTH_LOGIN: ["auth", "login"] as const,
  POST_AUTH_LOGOUT: ["auth", "logout"] as const,
  POST_AUTH_REFRESH: ["auth", "refresh"] as const,
} as const;

const mutations = {
  postAuthSignup: () => ({
    mutationFn: ({ payload }: TAuthApiRequestParameters["postAuthSignup"]) => {
      return authApi.postAuthSignup({ payload });
    },
    mutationKey: AUTH_MUTATION_KEY.POST_AUTH_SIGNUP,
    meta: {
      mutationFnName: "postAuthSignup",
    },
  }),
  postAuthLogin: () => ({
    mutationFn: ({ payload }: TAuthApiRequestParameters["postAuthLogin"]) => {
      return authApi.postAuthLogin({ payload });
    },
    mutationKey: AUTH_MUTATION_KEY.POST_AUTH_LOGIN,
    meta: {
      mutationFnName: "postAuthLogin",
    },
  }),
  postAuthLogout: () => ({
    mutationFn: ({}: TAuthApiRequestParameters["postAuthLogout"]) => {
      return authApi.postAuthLogout({});
    },
    mutationKey: AUTH_MUTATION_KEY.POST_AUTH_LOGOUT,
    meta: {
      mutationFnName: "postAuthLogout",
    },
  }),
  postAuthRefresh: () => ({
    mutationFn: ({ payload }: TAuthApiRequestParameters["postAuthRefresh"]) => {
      return authApi.postAuthRefresh({ payload });
    },
    mutationKey: AUTH_MUTATION_KEY.POST_AUTH_REFRESH,
    meta: {
      mutationFnName: "postAuthRefresh",
    },
  }),
};

export { mutations as authMutations };

/**
 * @tags auth
 * @summary Sign Up
 * @request POST:/auth/signup
 */
export const usePostAuthSignupMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      AuthResponseDto,
      DefaultError,
      TAuthApiRequestParameters["postAuthSignup"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postAuthSignup(),
    ...options,
  });
};

/**
 * @tags auth
 * @summary Login
 * @request POST:/auth/login
 */
export const usePostAuthLoginMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      AuthResponseDto,
      DefaultError,
      TAuthApiRequestParameters["postAuthLogin"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postAuthLogin(),
    ...options,
  });
};

/**
 * @tags auth
 * @summary Logout
 * @request POST:/auth/logout
 */
export const usePostAuthLogoutMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      void,
      DefaultError,
      TAuthApiRequestParameters["postAuthLogout"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postAuthLogout(),
    ...options,
  });
};

/**
 * @tags auth
 * @summary Refresh Token
 * @request POST:/auth/refresh
 */
export const usePostAuthRefreshMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      AuthResponseDto,
      DefaultError,
      TAuthApiRequestParameters["postAuthRefresh"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postAuthRefresh(),
    ...options,
  });
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/mutations/chats 1`] = `
"import type { DefaultError, UseMutationOptions } from "@tanstack/react-query";
import { useMutation } from "@tanstack/react-query";

import type { ChatResponseDto } from "@/shared/api/__generated__/dto";
import type { TChatsApiRequestParameters } from "./index";
import { chatsApi } from "./instance";

export const CHATS_MUTATION_KEY = {
  POST_CHATS: ["chats"] as const,
  PATCH_CHATS_CHATID: ["chats", "chatId"] as const,
  DELETE_CHATS_CHATID: ["chats", "chatId"] as const,
  POST_CHATS_CHATID_MESSAGES: ["chats", "chatId", "messages"] as const,
} as const;

const mutations = {
  postChats: () => ({
    mutationFn: ({ payload }: TChatsApiRequestParameters["postChats"]) => {
      return chatsApi.postChats({ payload });
    },
    mutationKey: CHATS_MUTATION_KEY.POST_CHATS,
    meta: {
      mutationFnName: "postChats",
    },
  }),
  patchChatsByChatId: () => ({
    mutationFn: ({
      chatId,
      payload,
    }: TChatsApiRequestParameters["patchChatsByChatId"]) => {
      return chatsApi.patchChatsByChatId({ chatId, payload });
    },
    mutationKey: CHATS_MUTATION_KEY.PATCH_CHATS_CHATID,
    meta: {
      mutationFnName: "patchChatsByChatId",
    },
  }),
  deleteChatsByChatId: () => ({
    mutationFn: ({
      chatId,
    }: TChatsApiRequestParameters["deleteChatsByChatId"]) => {
      return chatsApi.deleteChatsByChatId({ chatId });
    },
    mutationKey: CHATS_MUTATION_KEY.DELETE_CHATS_CHATID,
    meta: {
      mutationFnName: "deleteChatsByChatId",
    },
  }),
};

export { mutations as chatsMutations };

/**
 * @tags chats
 * @summary Create Chat
 * @request POST:/chats
 */
export const usePostChatsMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      ChatResponseDto,
      DefaultError,
      TChatsApiRequestParameters["postChats"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postChats(),
    ...options,
  });
};

/**
 * @tags chats
 * @summary Update Chat Title
 * @request PATCH:/chats/{chatId}
 */
export const usePatchChatsByChatIdMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      ChatResponseDto,
      DefaultError,
      TChatsApiRequestParameters["patchChatsByChatId"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.patchChatsByChatId(),
    ...options,
  });
};

/**
 * @tags chats
 * @summary Delete Chat
 * @request DELETE:/chats/{chatId}
 */
export const useDeleteChatsByChatIdMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      void,
      DefaultError,
      TChatsApiRequestParameters["deleteChatsByChatId"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.deleteChatsByChatId(),
    ...options,
  });
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/mutations/users 1`] = `
"import type { DefaultError, UseMutationOptions } from "@tanstack/react-query";
import { useMutation } from "@tanstack/react-query";

import type { UserResponseDto } from "@/shared/api/__generated__/dto";
import type { TUsersApiRequestParameters } from "./index";
import { usersApi } from "./instance";

export const USERS_MUTATION_KEY = {
  PATCH_USERS_ME: ["users", "me"] as const,
  DELETE_USERS_ME: ["users", "me"] as const,
} as const;

const mutations = {
  patchUsersMe: () => ({
    mutationFn: ({ payload }: TUsersApiRequestParameters["patchUsersMe"]) => {
      return usersApi.patchUsersMe({ payload });
    },
    mutationKey: USERS_MUTATION_KEY.PATCH_USERS_ME,
    meta: {
      mutationFnName: "patchUsersMe",
    },
  }),
  deleteUsersMe: () => ({
    mutationFn: ({}: TUsersApiRequestParameters["deleteUsersMe"]) => {
      return usersApi.deleteUsersMe({});
    },
    mutationKey: USERS_MUTATION_KEY.DELETE_USERS_ME,
    meta: {
      mutationFnName: "deleteUsersMe",
    },
  }),
};

export { mutations as usersMutations };

/**
 * @tags users
 * @summary Update Current User
 * @request PATCH:/users/me
 */
export const usePatchUsersMeMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      UserResponseDto,
      DefaultError,
      TUsersApiRequestParameters["patchUsersMe"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.patchUsersMe(),
    ...options,
  });
};

/**
 * @tags users
 * @summary Delete Current User
 * @request DELETE:/users/me
 */
export const useDeleteUsersMeMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      void,
      DefaultError,
      TUsersApiRequestParameters["deleteUsersMe"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.deleteUsersMe(),
    ...options,
  });
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/queries/chats 1`] = `
"import { queryOptions } from "@tanstack/react-query";

import type { GetChatsQueryParams } from "@/shared/api/__generated__/dto";
import type { TChatsApiRequestParameters } from "./index";
import { chatsApi } from "./instance";
const baseKey = "chats";

const queryKeys = {
  getChats: {
    rootKey: [baseKey, "getChats"],
    queryKey: (params?: GetChatsQueryParams) => [
      ...queryKeys.getChats.rootKey,
      ...(params ? [params] : []),
    ],
  },
  getChatsByChatId: {
    rootKey: [baseKey, "getChatsByChatId"],
    queryKey: (chatId: number) => [
      ...queryKeys.getChatsByChatId.rootKey,
      ...(chatId != null ? [chatId] : []),
    ],
  },
  getChatsByChatIdMessages: {
    rootKey: [baseKey, "getChatsByChatIdMessages"],
    queryKey: (chatId: number) => [
      ...queryKeys.getChatsByChatIdMessages.rootKey,
      ...(chatId != null ? [chatId] : []),
    ],
  },
  getChatsByChatIdStreamStatus: {
    rootKey: [baseKey, "getChatsByChatIdStreamStatus"],
    queryKey: (chatId: number) => [
      ...queryKeys.getChatsByChatIdStreamStatus.rootKey,
      ...(chatId != null ? [chatId] : []),
    ],
  },
};

const queries = {
  /**
   * @tags chats
   * @summary Get Chats
   * @request GET:/chats*
   */
  getChats: ({ params }: TChatsApiRequestParameters["getChats"]) =>
    queryOptions({
      queryKey: queryKeys.getChats.queryKey(params),
      queryFn: () => chatsApi.getChats({ params }),
    }),

  /**
   * @tags chats
   * @summary Get Chat
   * @request GET:/chats/{chatId}*
   */
  getChatsByChatId: ({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatId"]) =>
    queryOptions({
      queryKey: queryKeys.getChatsByChatId.queryKey(chatId),
      queryFn: () => chatsApi.getChatsByChatId({ chatId }),
      staleTime: Number.POSITIVE_INFINITY,
    }),

  /**
   * @tags chats
   * @summary Get Messages
   * @request GET:/chats/{chatId}/messages*
   */
  getChatsByChatIdMessages: ({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatIdMessages"]) =>
    queryOptions({
      queryKey: queryKeys.getChatsByChatIdMessages.queryKey(chatId),
      queryFn: () => chatsApi.getChatsByChatIdMessages({ chatId }),
    }),

  /**
   * @tags chats
   * @summary Get Stream Status
   * @request GET:/chats/{chatId}/stream-status*
   */
  getChatsByChatIdStreamStatus: ({
    chatId,
  }: TChatsApiRequestParameters["getChatsByChatIdStreamStatus"]) =>
    queryOptions({
      queryKey: queryKeys.getChatsByChatIdStreamStatus.queryKey(chatId),
      queryFn: () => chatsApi.getChatsByChatIdStreamStatus({ chatId }),
    }),
};

export {
  baseKey as chatsBaseKey,
  queries as chatsQueries,
  queryKeys as chatsQueryKeys,
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'ai-chat' - queries, mutations > ai-chat/queries/users 1`] = `
"import { queryOptions } from "@tanstack/react-query";

import type { TUsersApiRequestParameters } from "./index";
import { usersApi } from "./instance";
const baseKey = "users";

const queryKeys = {
  getUsersMe: {
    rootKey: [baseKey, "getUsersMe"],
    queryKey: () => [...queryKeys.getUsersMe.rootKey],
  },
};

const queries = {
  /**
   * @tags users
   * @summary Get Current User
   * @request GET:/users/me*
   */
  getUsersMe: ({}: TUsersApiRequestParameters["getUsersMe"]) =>
    queryOptions({
      queryKey: queryKeys.getUsersMe.queryKey(),
      queryFn: () => usersApi.getUsersMe({}),
      staleTime: Number.POSITIVE_INFINITY,
      gcTime: Number.POSITIVE_INFINITY,
    }),
};

export {
  baseKey as usersBaseKey,
  queries as usersQueries,
  queryKeys as usersQueryKeys,
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'petstore' - queries, mutations > petstore/global-mutation-effect 1`] = `
"import type {
  DefaultError,
  Mutation,
  QueryClient,
} from "@tanstack/react-query";

import type { petsMutations } from "@/entities/pets/__generated__/api/mutations";
import type { usersMutations } from "@/entities/users/__generated__/api/mutations";
// biome-ignore lint/suspicious/noExplicitAny: 타입 제약을 위해 any 사용
type AnyMutationFn = (variables: any) => any;

type MutationFactory = () => {
  mutationFn: AnyMutationFn;
  mutationKey: readonly unknown[];
};

export type MutationMap = Record<string, MutationFactory>;

type ExtractMutationDef<M extends MutationMap, K extends keyof M> = ReturnType<
  M[K]
>;

type ExtractMutationFn<
  M extends MutationMap,
  K extends keyof M,
> = ExtractMutationDef<M, K>["mutationFn"];

type ExtractMutationVariables<
  M extends MutationMap,
  K extends keyof M,
> = Parameters<ExtractMutationFn<M, K>>[0];

type ExtractMutationData<M extends MutationMap, K extends keyof M> = Awaited<
  ReturnType<ExtractMutationFn<M, K>>
>;

export type GlobalMutationEffectMap<M extends MutationMap> = Partial<{
  [K in keyof M]: {
    onSuccess: {
      invalidate: (
        data: ExtractMutationData<M, K>,
        variables: ExtractMutationVariables<M, K>,
        context: unknown,
        mutation: Mutation<
          ExtractMutationData<M, K>,
          DefaultError,
          ExtractMutationVariables<M, K>,
          unknown
        >,
      ) => void;
    };
  };
}>;

export type TPetsGlobalMutationEffects = GlobalMutationEffectMap<
  typeof petsMutations
>;
export type TUsersGlobalMutationEffects = GlobalMutationEffectMap<
  typeof usersMutations
>;

export type TGlobalMutationEffectFactory = (
  queryClient: QueryClient,
) => Partial<TPetsGlobalMutationEffects & TUsersGlobalMutationEffects>;
"
`;

exports[`snapshot tests > TanStack Query code generation > 'petstore' - queries, mutations > petstore/mutations/pets 1`] = `
"import type { DefaultError, UseMutationOptions } from "@tanstack/react-query";
import { useMutation } from "@tanstack/react-query";

import type { PetDto } from "@/shared/api/__generated__/dto";
import type { TPetsApiRequestParameters } from "./index";
import { petsApi } from "./instance";

export const PETS_MUTATION_KEY = {
  POST_PETS: ["pets"] as const,
  PUT_PETS_PETID: ["pets", "petId"] as const,
  DELETE_PETS_PETID: ["pets", "petId"] as const,
} as const;

const mutations = {
  postPets: () => ({
    mutationFn: ({ payload }: TPetsApiRequestParameters["postPets"]) => {
      return petsApi.postPets({ payload });
    },
    mutationKey: PETS_MUTATION_KEY.POST_PETS,
    meta: {
      mutationFnName: "postPets",
    },
  }),
  putPetsByPetId: () => ({
    mutationFn: ({
      petId,
      payload,
    }: TPetsApiRequestParameters["putPetsByPetId"]) => {
      return petsApi.putPetsByPetId({ petId, payload });
    },
    mutationKey: PETS_MUTATION_KEY.PUT_PETS_PETID,
    meta: {
      mutationFnName: "putPetsByPetId",
    },
  }),
  deletePetsByPetId: () => ({
    mutationFn: ({ petId }: TPetsApiRequestParameters["deletePetsByPetId"]) => {
      return petsApi.deletePetsByPetId({ petId });
    },
    mutationKey: PETS_MUTATION_KEY.DELETE_PETS_PETID,
    meta: {
      mutationFnName: "deletePetsByPetId",
    },
  }),
};

export { mutations as petsMutations };

/**
 * @tags pets
 * @summary Create a pet
 * @request POST:/pets
 */
export const usePostPetsMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      PetDto,
      DefaultError,
      TPetsApiRequestParameters["postPets"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.postPets(),
    ...options,
  });
};

/**
 * @tags pets
 * @summary Update a pet
 * @request PUT:/pets/{petId}
 */
export const usePutPetsByPetIdMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      PetDto,
      DefaultError,
      TPetsApiRequestParameters["putPetsByPetId"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.putPetsByPetId(),
    ...options,
  });
};

/**
 * @tags pets
 * @summary Delete a pet
 * @request DELETE:/pets/{petId}
 */
export const useDeletePetsByPetIdMutation = <TContext = unknown>(
  options?: Omit<
    UseMutationOptions<
      void,
      DefaultError,
      TPetsApiRequestParameters["deletePetsByPetId"],
      TContext
    >,
    "mutationFn" | "mutationKey"
  >,
) => {
  return useMutation({
    ...mutations.deletePetsByPetId(),
    ...options,
  });
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'petstore' - queries, mutations > petstore/queries/pets 1`] = `
"import { queryOptions } from "@tanstack/react-query";

import type { ListPetsQueryParams } from "@/shared/api/__generated__/dto";
import type { TPetsApiRequestParameters } from "./index";
import { petsApi } from "./instance";
const baseKey = "pets";

const queryKeys = {
  getPets: {
    rootKey: [baseKey, "getPets"],
    queryKey: (params?: ListPetsQueryParams) => [
      ...queryKeys.getPets.rootKey,
      ...(params ? [params] : []),
    ],
  },
  getPetsByPetId: {
    rootKey: [baseKey, "getPetsByPetId"],
    queryKey: (petId: number) => [
      ...queryKeys.getPetsByPetId.rootKey,
      ...(petId != null ? [petId] : []),
    ],
  },
};

const queries = {
  /**
   * @tags pets
   * @summary List all pets
   * @request GET:/pets*
   */
  getPets: ({ params }: TPetsApiRequestParameters["getPets"]) =>
    queryOptions({
      queryKey: queryKeys.getPets.queryKey(params),
      queryFn: () => petsApi.getPets({ params }),
    }),

  /**
   * @tags pets
   * @summary Get a pet by ID
   * @request GET:/pets/{petId}*
   */
  getPetsByPetId: ({ petId }: TPetsApiRequestParameters["getPetsByPetId"]) =>
    queryOptions({
      queryKey: queryKeys.getPetsByPetId.queryKey(petId),
      queryFn: () => petsApi.getPetsByPetId({ petId }),
      staleTime: Number.POSITIVE_INFINITY,
    }),
};

export {
  baseKey as petsBaseKey,
  queries as petsQueries,
  queryKeys as petsQueryKeys,
};
"
`;

exports[`snapshot tests > TanStack Query code generation > 'petstore' - queries, mutations > petstore/queries/users 1`] = `
"import { queryOptions } from "@tanstack/react-query";

import type { TUsersApiRequestParameters } from "./index";
import { usersApi } from "./instance";
const baseKey = "users";

const queryKeys = {
  getUsers: {
    rootKey: [baseKey, "getUsers"],
    queryKey: () => [...queryKeys.getUsers.rootKey],
  },
  getUsersByUserId: {
    rootKey: [baseKey, "getUsersByUserId"],
    queryKey: (userId: string) => [
      ...queryKeys.getUsersByUserId.rootKey,
      ...(userId != null ? [userId] : []),
    ],
  },
};

const queries = {
  /**
   * @tags users
   * @summary List users
   * @request GET:/users*
   */
  getUsers: ({}: TUsersApiRequestParameters["getUsers"]) =>
    queryOptions({
      queryKey: queryKeys.getUsers.queryKey(),
      queryFn: () => usersApi.getUsers({}),
      staleTime: Number.POSITIVE_INFINITY,
      gcTime: Number.POSITIVE_INFINITY,
    }),

  /**
   * @tags users
   * @summary Get user by ID
   * @request GET:/users/{userId}*
   */
  getUsersByUserId: ({
    userId,
  }: TUsersApiRequestParameters["getUsersByUserId"]) =>
    queryOptions({
      queryKey: queryKeys.getUsersByUserId.queryKey(userId),
      queryFn: () => usersApi.getUsersByUserId({ userId }),
    }),
};

export {
  baseKey as usersBaseKey,
  queries as usersQueries,
  queryKeys as usersQueryKeys,
};
"
`;
